--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "version": "3.3.7+1",
   "homepage": "http://startbootstrap.com/template-overviews/sb-admin-2",
   "author": "Start Bootstrap",
+  "scripts": {
+    "prebuild": "bower install",
+    "build": "gulp",
+    "start": "gulp dev"
+  },
   "license": {
     "type": "MIT",
     "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
   },
   "devDependencies": {
+    "bower": "^1.8.4",
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.10",
     "gulp-header": "^1.8.7",
+    "gulp-html-replace": "^1.6.2",
     "gulp-less": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace-path": "^0.4.0",
     "gulp-uglify": "^1.5.4"
   },
   "repository": {
