把 bower install 移到 preinstall

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://startbootstrap.com/template-overviews/sb-admin-2",
   "author": "Start Bootstrap",
   "scripts": {
-    "prebuild": "bower install",
+    "preinstall": "bower install",
     "build": "gulp",
     "start": "gulp dev"
   },
